objects/Zobj1__c.object
<CustomObject>
    <fields>
        <fullName>DateField1__c</fullName>
        <label>DateField1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailField1__c</fullName>
        <label>EmailField1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TextField__c</fullName>
        <label>TextField</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phonefield__c</fullName>
        <label>phonefield</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>picklistfield__c</fullName>
        <label>picklistfield</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Zobj1</label>
    <nameField>
        <label>Zobj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zobj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>